--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>estra, inc.</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Noto+Sans+JP:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -21,11 +27,28 @@
     </header>
     <main>
       <div class="topview">
-        <div class="topview__copy"></div>
         <div class="topview__image">
           <img src="img/firstview.jpg" alt="firstview" />
         </div>
+        <div class="topview__text">
+          <div class="topview__text--title">
+            Commit to the <span>growth</span><br />for everyone
+          </div>
+          <div class="topview__text--subtitle">
+            全ての人の<span>成長</span>にコミットする
+          </div>
+          <div class="topview__text--description">
+            Educational Technology Company<br />estra inc since 2019
+          </div>
+        </div>
       </div>
+      <div class="news"></div>
+      <div class="about"></div>
+      <div class="service"></div>
+      <div class="blog"></div>
+      <div class="company"></div>
+      <div class="linkimages"></div>
+      <div class="contact"></div>
     </main>
     <footer>
       <div class="footer__copyright">Copyright &copy;</div>
