--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header>
       <img class="header__logo" src="img/estra_logo.png" />
       <ul class="header__nav">
-        <li>News</li>
-        <li>About</li>
-        <li>Service</li>
-        <li>Blog</li>
-        <li>Company</li>
-        <li>Contact</li>
+        <li><a href="">News</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Service</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Company</a></li>
+        <li><a href="">Contact</a></li>
       </ul>
     </header>
     <main>
@@ -42,12 +42,172 @@
           </div>
         </div>
       </div>
-      <div class="news"></div>
-      <div class="about"></div>
-      <div class="service"></div>
-      <div class="blog"></div>
-      <div class="company"></div>
-      <div class="linkimages"></div>
+      <div class="news">
+        <div class="news__wrapper">
+          <div class="news__title">
+            <p>News</p>
+            <h2>新着情報</h2>
+          </div>
+          <div class="news__table">
+            <table>
+              <tr class="news__table--row">
+                <td class="news__table--date">2021/01/01</td>
+                <td class="news__table--tag"><p>ニュース</p></td>
+                <td class="news__table--description">
+                  COACHTECHのサービスが開始されました。
+                </td>
+              </tr>
+              <tr class="news__table--row">
+                <td class="news__table--date">2021/01/01</td>
+                <td class="news__table--tag"><p>ニュース</p></td>
+                <td class="news__table--description">
+                  COACHTECHのサービスが開始されました。
+                </td>
+              </tr>
+              <tr class="news__table--row">
+                <td class="news__table--date">2021/01/01</td>
+                <td class="news__table--tag"><p>ニュース</p></td>
+                <td class="news__table--description">
+                  COACHTECHのサービスが開始されました。
+                </td>
+              </tr>
+              <tr class="news__table--row">
+                <td class="news__table--date">2021/01/01</td>
+                <td class="news__table--tag"><p>ニュース</p></td>
+                <td class="news__table--description">
+                  COACHTECHのサービスが開始されました。
+                </td>
+              </tr>
+              <tr class="news__table--row">
+                <td class="news__table--date">2021/01/01</td>
+                <td class="news__table--tag"><p>ニュース</p></td>
+                <td class="news__table--description">
+                  COACHTECHのサービスが開始されました。
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="about">
+        <div class="about__title">
+          <p>about</p>
+          <h2>Technology X Coaching</h2>
+        </div>
+        <div class="about__content">
+          <div class="about__content--text">
+            <p>
+              株式会社estraはデジタル化が遅れている教育業界に最新のテクノロジーを導入することによって教育のDX化を実現します。
+            </p>
+            <br />
+            <p>
+              独自のオペレーションとコーチングを融合した新しい教育の仕組みにより、1人ひとりに合わせた最適な教育を実現します。
+            </p>
+          </div>
+          <div class="about__content--image">
+            <img src="img/about.jpg" alt="about image" />
+          </div>
+        </div>
+      </div>
+
+      <div class="service">
+        <div class="service-title">
+          <p>Service</p>
+          <h2>サービス内容</h2>
+        </div>
+        <div class="service-content">
+          <div class="service-card">
+            <img
+              class="service-card__img"
+              src="./img/service__first.svg"
+              alt="サービス画像"
+            />
+            <p class="service-card__paragraph--bold service-card__paragraph">
+              教育事業
+            </p>
+            <div class="service-card__paragraph-wrapper">
+              <p class="service-card__paragraph--left-align">
+                サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。
+              </p>
+            </div>
+          </div>
+          <div class="service-card">
+            <img
+              class="service-card__img"
+              src="./img/service__first.svg"
+              alt="サービス画像"
+            />
+            <div class="service-card__text">
+              <p class="service-card__paragraph--bold">教育事業</p>
+              <p class="service-card__paragraph">
+                サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。
+              </p>
+            </div>
+          </div>
+          <div class="service-card">
+            <img
+              class="service-card__img"
+              src="./img/service__first.svg"
+              alt="サービス画像"
+            />
+            <div class="service-card__text">
+              <p class="service-card__paragraph--bold">教育事業</p>
+              <p class="service-card__paragraph">
+                サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="blog">
+        <div class="blog__title">
+          <p>blog</p>
+          <h2>ブログ</h2>
+        </div>
+        <div class="blog__content--wrapper">
+          <div class="blog__card--wrapper"></div>
+          <div class="blog__list-link"></div>
+        </div>
+      </div>
+      <div class="company">
+        <div class="company__title">
+          <p>Company</p>
+          <h2>会社概要</h2>
+        </div>
+        <table class="company__table">
+          <tr>
+            <th>会社名</th>
+            <td>株式会社estra</td>
+          </tr>
+          <tr>
+            <th>代表者名</th>
+            <td>福場凜太郎</td>
+          </tr>
+          <tr>
+            <th>本社所在地</th>
+            <td>東京都渋谷区1-1-1</td>
+          </tr>
+          <tr>
+            <th>従業員数</th>
+            <td>100名</td>
+          </tr>
+          <tr>
+            <th>電話番号</th>
+            <td>0120-00-0000</td>
+          </tr>
+          <tr>
+            <th>資本金</th>
+            <td>¥10,000,000</td>
+          </tr>
+        </table>
+      </div>
+      <div class="linkimages">
+        <div class="ecruit">
+          <p>採用情報</p>
+        </div>
+        <div class="interview">社員インタビュー</div>
+      </div>
       <div class="contact"></div>
     </main>
     <footer>
