--- a/index.html
+++ b/index.html
@@ -161,15 +161,58 @@
       </div>
 
       <div class="blog">
-        <div class="blog__title">
-          <p>blog</p>
-          <h2>ブログ</h2>
-        </div>
-        <div class="blog__content--wrapper">
-          <div class="blog__card--wrapper"></div>
-          <div class="blog__list-link"></div>
+        <div class="blog-wrapper">
+          <div class="blog-title">
+            <p>blog</p>
+            <h2>ブログ</h2>
+          </div>
+          <div class="blog-list">
+            <div class="blog-card">
+              <div class="blog-card__chip">Blog</div>
+              <img class="blog-card__img" src="./img/blog__first.jpg" />
+              <div class="blog-card__text">
+                <p class="blog-card__title">
+                  プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
+                </p>
+                <div class="blog-card__date-tag">
+                  <p class="blog-card__date">2021/01/01</p>
+                  <p class="blog-card__tag">#COACHTECH</p>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="blog-card__chip">Blog</div>
+              <img class="blog-card__img" src="./img/blog__first.jpg" />
+              <div class="blog-card__text">
+                <p class="blog-card__title">
+                  プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
+                </p>
+                <div class="blog-card__date-tag">
+                  <p class="blog-card__date">2021/01/01</p>
+                  <p class="blog-card__tag">#COACHTECH</p>
+                </div>
+              </div>
+            </div>
+            <div class="blog-card">
+              <div class="blog-card__chip">Blog</div>
+              <img class="blog-card__img" src="./img/blog__first.jpg" />
+              <div class="blog-card__text">
+                <p class="blog-card__title">
+                  プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
+                </p>
+                <div class="blog-card__date-tag">
+                  <p class="blog-card__date">2021/01/01</p>
+                  <p class="blog-card__tag">#COACHTECH</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blog-link">
+            <button class="blog-link__btn">一覧ページへ</button>
+          </div>
         </div>
       </div>
+
       <div class="company">
         <div class="company__title">
           <p>Company</p>
