--- a/index.html
+++ b/index.html
@@ -167,58 +167,66 @@
             <h2>ブログ</h2>
           </div>
           <div class="blog-list">
-            <div class="blog-card">
-              <div class="blog-card__chip">Blog</div>
-              <img class="blog-card__img" src="./img/blog__first.jpg" />
-              <div class="blog-card__text">
-                <p class="blog-card__title">
-                  プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
-                </p>
-                <div class="blog-card__date-tag">
-                  <p class="blog-card__date">2021/01/01</p>
-                  <p class="blog-card__tag">#COACHTECH</p>
+            <a href="#" class="link">
+              <div class="blog-card">
+                <div class="blog-card__chip">Blog</div>
+                <img class="blog-card__img" src="./img/blog__first.jpg" />
+                <div class="blog-card__text">
+                  <p class="blog-card__title">
+                    プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
+                  </p>
+                  <div class="blog-card__date-tag">
+                    <p class="blog-card__date">2021/01/01</p>
+                    <p class="blog-card__tag">#COACHTECH</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="blog-card">
-              <div class="blog-card__chip">Blog</div>
-              <img class="blog-card__img" src="./img/blog__first.jpg" />
-              <div class="blog-card__text">
-                <p class="blog-card__title">
-                  プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
-                </p>
-                <div class="blog-card__date-tag">
-                  <p class="blog-card__date">2021/01/01</p>
-                  <p class="blog-card__tag">#COACHTECH</p>
+            </a>
+            <a href="#" class="link">
+              <div class="blog-card">
+                <div class="blog-card__chip">Blog</div>
+                <img class="blog-card__img" src="./img/blog__first.jpg" />
+                <div class="blog-card__text">
+                  <p class="blog-card__title">
+                    プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
+                  </p>
+                  <div class="blog-card__date-tag">
+                    <p class="blog-card__date">2021/01/01</p>
+                    <p class="blog-card__tag">#COACHTECH</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="blog-card">
-              <div class="blog-card__chip">Blog</div>
-              <img class="blog-card__img" src="./img/blog__first.jpg" />
-              <div class="blog-card__text">
-                <p class="blog-card__title">
-                  プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
-                </p>
-                <div class="blog-card__date-tag">
-                  <p class="blog-card__date">2021/01/01</p>
-                  <p class="blog-card__tag">#COACHTECH</p>
+            </a>
+            <a href="#" class="link">
+              <div class="blog-card">
+                <div class="blog-card__chip">Blog</div>
+                <img class="blog-card__img" src="./img/blog__first.jpg" />
+                <div class="blog-card__text">
+                  <p class="blog-card__title">
+                    プログラミング学習の勉強方法を特集。 挫折しない秘訣とは？
+                  </p>
+                  <div class="blog-card__date-tag">
+                    <p class="blog-card__date">2021/01/01</p>
+                    <p class="blog-card__tag">#COACHTECH</p>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="blog-link">
-            <button class="blog-link__btn">一覧ページへ</button>
+            <a href="#" class="limk">
+              <button class="blog-link__btn">一覧ページへ</button>
+            </a>
           </div>
         </div>
       </div>
 
       <div class="company">
-        <div class="company__title">
+        <div class="company-title">
           <p>Company</p>
           <h2>会社概要</h2>
         </div>
-        <table class="company__table">
+        <table class="company-table">
           <tr>
             <th>会社名</th>
             <td>株式会社estra</td>
