--- a/index.html
+++ b/index.html
@@ -254,10 +254,12 @@
         </table>
       </div>
       <div class="linkimages">
-        <div class="ecruit">
-          <p>採用情報</p>
+        <div class="recruit">
+          <p class="recruit__paragraph">採用情報</p>
         </div>
-        <div class="interview">社員インタビュー</div>
+        <div class="interview">
+          <p class="interview__paragraph">社員インタビュー</p>
+        </div>
       </div>
       <div class="contact"></div>
     </main>
