--- a/index.html
+++ b/index.html
@@ -253,18 +253,29 @@
           </tr>
         </table>
       </div>
+
       <div class="linkimages">
-        <div class="recruit">
+        <a href="#" class="recruit link">
           <p class="recruit__paragraph">採用情報</p>
-        </div>
-        <div class="interview">
+        </a>
+        <a href="#" class="interview link">
           <p class="interview__paragraph">社員インタビュー</p>
-        </div>
+        </a>
       </div>
-      <div class="contact"></div>
+      <div class="contact">
+        <p class="contact__paragraph">
+          株式会社estraへのお問い合わせはこちらから
+        </p>
+        <div class="contact__vertical"></div>
+        <a href="#" class="link">
+          <div class="contact-btn">お問い合わせ</div>
+        </a>
+      </div>
     </main>
     <footer>
-      <div class="footer__copyright">Copyright &copy;</div>
+      <div class="footer__copyright">
+        Copyright&copy;estra,inc All Rights Reserved.
+      </div>
     </footer>
   </body>
 </html>
